<resources>
    <string name="app_name">Translator App</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registerhere">Don\'t have an account? Register Here</string>
    <string name="register">Register</string>
    <string name="login_here">Already have an account? Login Here</string>
    <string name="reenter">Re-enter Password</string>
</resources>